# cliprate

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE  README.md  WORKSPACE  api.yaml  go.mod  go.sum  go_vendor.bzl
app/: package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.tsx  index.css  index.tsx  setupProxy.js
app/src/api/: index.ts
app/src/api/core/: OpenAPI.ts
app/src/api/models/: ApiResponse.ts  Clip.ts  SiteConfig.ts  Subscriber.ts  loginWithTwitchCodeRequest.ts  loginWithTwitchCodeResponse.ts
app/src/api/services/: AuthService.ts  ConfService.ts
app/src/components/Auth/: App.tsx  Login.tsx
app/src/components/Header/: index.tsx
app/src/siteconfig/: index.tsx
core/api/: BUILD.bazel  api.go
core/fe/: BUILD.bazel  main.go
core/fe/pkg/app/: BUILD.bazel  app.go
core/fe/pkg/authz/: BUILD.bazel  authz.go
core/subsync/: README.md
docs/provisioning/: 001-twitch.md
pkg/storage/: BUILD.bazel  storage.go  subscribers.go
scripts/: generate-api-code.sh  install-tools.sh  print-workspace-status.sh  update-deps.sh
