load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "storage.go",
        "subscribers.go",
    ],
    importpath = "github.com/broadcastertools/cliprate/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//core/api:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_mongodb_go_mongo_driver//x/mongo/driver/connstring:go_default_library",
    ],
)
